# aur-pkg-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
aurpkgutils/: __init__.py  __main__.py  aurpkgutils.py  cli.py
tests/: test_aurpkgutils.py
