[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aurpkgutils"
version = "0.1.0"
description = "CLI tool to automate repetitive AUR package maintenance tasks"
dependencies = ["requests", "beautifulsoup4", "lxml", "typer"]
requires-python = ">= 3.8"
authors = [{ name = "Brian Thompson", email = "brianrobt@pm.me" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["aur", "pkgbuild", "pkg", "utils", "archlinux"]

[project.scripts]
aurpkgutils = "aurpkgutils.cli:app"
